plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.aiplatform'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.springframework.statemachine:spring-statemachine-core:4.0.0'
    implementation 'org.apache.poi:poi-ooxml:5.2.5'
    implementation 'org.apache.pdfbox:pdfbox:3.0.1'
    implementation 'io.minio:minio:8.5.7'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'org.flywaydb:flyway-core:10.8.1'
    runtimeOnly 'org.flywaydb:flyway-database-postgresql:10.8.1'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.testcontainers:junit-jupiter:1.19.5'
    testImplementation 'org.testcontainers:postgresql:1.19.5'
}

tasks.named('test') {
    useJUnitPlatform()
}